# ShadowDetection

./: .gitignore  CMakeLists.txt  Demo.cpp  Demo2.cpp  README.md  Sdd.cpp  Stats.py  processFolder.py  run_demo.sh  run_demo2.sh  run_sdd.sh  run_stats.sh
config/: FrameProcessor.xml  VideoCapture.xml
package_sdd/: CMakeLists.txt  LrTextureShadRem.cpp  run_shadow.sh
package_sdd/utils/: GaborFilter.cpp  GaborFilter.h
stats/: Comparator.cpp  VideoFolder.cpp  VideoFolder.h  comparator
videofolder/: VideoFolder.cpp  VideoFolder.h
